<?xml version="1.0" encoding="utf-8"?> <RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:text="@string/green" />

    <RadioButton
        android:id="@+id/radio2"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:text="@string/blue" />

    <RadioButton
        android:id="@+id/radio3"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:text="@string/red" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_del_radio_button" />
</RadioGroup>


