<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu8">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/radioGoups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_goups"
            android:onClick="RadiooGoups"/>

        <Button
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttons"
            android:onClick="Buuttoons"/>

        <Button
            android:id="@+id/urlDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_demo"
            android:onClick="URLDEMOO"/>

        <Button
            android:id="@+id/overlapButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overlap_buttons"
            android:onClick="OOVERLAP"/>

        <Button
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scrollview"
            android:onClick="SCROOLVIEW"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>